# hello-rust

./: Makefile  README.md
src/: Cargo.toml  Makefile  Xargo.toml  build.rs
src/.cargo/: config
src/src/: main.rs
