[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Michael Owen <tch_owen@163.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.6"}
tokio = "0.1.6"
tempdir = "0.3.7"
tokio-core = { version = "0.1"}
futures = { version = "0.1"}
tokio-uds = "0.1"
pcap = { version = "0.7", features = ["tokio"] }

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic='abort'

